// Flow Database Schema - Pay-as-you-go Model
// Generated for dbdiagram.io

Project Flow {
  database_type: 'PostgreSQL'
  Note: 'Flow - AI-powered Call Center Management System with Pay-as-you-go Pricing'
}

// Enums
Enum user_role {
  admin [note: 'Full system access - created via seeder only']
  user [note: 'Regular user - created via registration']
}

Enum service_type {
  call_center [note: 'Call Center service with ticket management']
  hr [note: 'HR service with employee support tools']
}

Enum service_account_status {
  active [note: 'Account is active and can make API calls']
  suspended [note: 'Account suspended due to negative balance']
  closed [note: 'Account permanently closed']
}

Enum payment_type {
  topup [note: 'Balance top-up payment']
  refund [note: 'Refund payment']
  adjustment [note: 'Manual balance adjustment']
  usage [note: 'Usage-based deduction']
}

Enum payment_status {
  pending [note: 'Payment initiated']
  processing [note: 'Payment being processed']
  completed [note: 'Payment successful']
  failed [note: 'Payment failed']
  cancelled [note: 'Payment cancelled']
}

Enum invoice_status {
  draft [note: 'Invoice not yet sent']
  sent [note: 'Invoice sent to customer']
  paid [note: 'Invoice paid']
  overdue [note: 'Invoice past due date']
}

// ============================================
// Users and Authentication
// ============================================
Table users {
  id bigint [pk, increment]
  name varchar [not null]
  phone_number varchar(20) [unique, not null]
  phone_verified_at timestamp [null]
  password varchar [not null]
  role user_role [default: 'user', note: 'User role - admin only via seeder']
  remember_token varchar [null]
  created_at timestamp
  updated_at timestamp
  
  indexes {
    role
  }
  
  Note: 'User accounts. Admins created via seeder only, regular users via registration. Phone number authentication with OTP verification via OTPIQ'
}

Table phone_verification_codes {
  id bigint [pk, increment]
  phone_number varchar(20) [not null]
  code varchar(6) [not null, note: '6-digit OTP code']
  expires_at timestamp [not null]
  verified_at timestamp [null]
  is_used boolean [default: false]
  ip_address varchar(45) [null]
  created_at timestamp
  updated_at timestamp
  
  indexes {
    phone_number
    (phone_number, code, is_used)
    (phone_number, expires_at)
  }
  
  Note: 'OTP codes for phone verification via OTPIQ SMS/WhatsApp service'
}

Table sessions {
  id varchar [pk]
  user_id bigint [null, ref: > users.id]
  ip_address varchar(45) [null]
  user_agent text [null]
  payload longtext [not null]
  last_activity integer [not null]
  
  Note: 'User session data'
}

// ============================================
// Pay-as-you-go: Service Accounts & Billing
// ============================================
Table service_accounts {
  id uuid [pk]
  user_id bigint [not null, ref: > users.id]
  status service_account_status [default: 'active']
  balance decimal(12,2) [default: 0, note: 'Prepaid credit balance']
  currency varchar(3) [default: 'IQD']
  credit_limit decimal(12,2) [default: 0, note: 'Postpaid allowance (0 = prepaid only)']
  metadata json [null]
  created_at timestamp
  updated_at timestamp
  
  indexes {
    (user_id, status)
  }
  
  Note: 'User service account - tracks balance and access for pay-as-you-go billing'
}

Table pricing {
  id uuid [pk]
  service_type service_type [not null]
  price_per_1k_tokens decimal(10,4) [not null]
  min_tokens integer [default: 1, note: 'Minimum billable tokens per request']
  currency varchar(3) [default: 'IQD']
  effective_from timestamp [not null]
  effective_until timestamp [null, note: 'NULL = currently active']
  created_at timestamp
  updated_at timestamp
  
  indexes {
    (service_type, effective_from)
  }
  
  Note: 'Token pricing per service. Multiple rows allow price history and scheduling'
}

Table pricing_tiers {
  id uuid [pk]
  service_type service_type [not null]
  min_tokens integer [not null, note: 'Minimum cumulative usage for this tier']
  discount_percent decimal(5,2) [default: 0]
  price_per_1k_tokens decimal(10,4) [null, note: 'Override price at this tier']
  created_at timestamp
  updated_at timestamp
  
  indexes {
    (service_type, min_tokens)
  }
  
  Note: 'Volume discount tiers - e.g., 10% off after 1M tokens'
}

Table usage_records {
  id uuid [pk]
  service_account_id uuid [not null, ref: > service_accounts.id]
  service_type service_type [not null]
  tokens_used integer [not null]
  cost decimal(10,4) [not null, note: 'Cost locked at time of usage']
  action_type varchar [null, note: 'chat, chat_with_tools, etc.']
  resource_id varchar [null]
  metadata json [null]
  recorded_at timestamp [not null]
  created_at timestamp
  updated_at timestamp
  
  indexes {
    (service_account_id, recorded_at)
    recorded_at
    service_type
  }
  
  Note: 'Immutable usage log with cost locked at usage time. Used for billing and analytics'
}

Table invoices {
  id uuid [pk]
  service_account_id uuid [not null, ref: > service_accounts.id]
  period_start date [not null]
  period_end date [not null]
  total_tokens integer [not null]
  total_amount decimal(12,2) [not null]
  currency varchar(3) [default: 'IQD']
  status invoice_status [default: 'draft']
  due_date date [null]
  paid_at timestamp [null]
  created_at timestamp
  updated_at timestamp
  
  indexes {
    (service_account_id, status)
    (period_start, period_end)
  }
  
  Note: 'Monthly usage statements/invoices for postpaid accounts'
}

// ============================================
// Payments
// ============================================
Table payments {
  id uuid [pk]
  user_id bigint [not null, ref: > users.id]
  service_account_id uuid [null, ref: > service_accounts.id]
  transaction_id varchar [unique, null]
  qicard_payment_id varchar [null]
  amount decimal(12,2) [not null]
  currency varchar(3) [default: 'IQD']
  type payment_type [default: 'topup']
  status payment_status [default: 'pending']
  description text [null]
  payment_method varchar [null]
  metadata json [null]
  qicard_response json [null]
  paid_at timestamp [null]
  created_at timestamp
  updated_at timestamp
  
  indexes {
    (user_id, status)
    service_account_id
    transaction_id
    qicard_payment_id
  }
  
  Note: 'Payment transactions. Top-ups add to balance, refunds deduct'
}

// ============================================
// Tickets Management
// ============================================
Table tickets {
  ticket_id uuid [pk]
  tenant_id uuid [not null]
  channel enum [default: 'chat', note: 'voice, chat']
  status enum [default: 'open', note: 'open, pending, resolved, closed']
  priority enum [default: 'medium', note: 'low, medium, high, urgent']
  category enum [default: 'general', note: 'billing, technical, shipping, account, general, other']
  subject varchar [not null]
  summary text [not null]
  created_by_type varchar [default: 'system', note: 'agent or system']
  created_by_id varchar [null, note: 'agent_id or system']
  assigned_to uuid [null, ref: > users.id]
  created_at timestamp
  updated_at timestamp
  
  indexes {
    tenant_id
    assigned_to
    (tenant_id, status)
    (tenant_id, priority)
    (status, priority)
    created_at
  }
  
  Note: 'Support tickets for customer service'
}

// ============================================
// API Key Management
// ============================================
Table api_keys {
  id uuid [pk]
  user_id bigint [not null, ref: > users.id]
  service_account_id uuid [null, ref: > service_accounts.id]
  name varchar [not null]
  key_hash varchar [unique, not null]
  key_prefix varchar(20) [not null]
  status enum [default: 'active', note: 'active, revoked, expired']
  last_used_at timestamp [null]
  expires_at timestamp [null]
  revoked_at timestamp [null]
  metadata json [null]
  created_at timestamp
  updated_at timestamp
  
  indexes {
    (user_id, status)
    service_account_id
    key_prefix
    last_used_at
  }
  
  Note: 'API keys for programmatic access. Linked to service account for billing'
}

Table api_key_services {
  id uuid [pk]
  api_key_id uuid [not null, ref: > api_keys.id]
  service_type service_type [not null]
  created_at timestamp
  updated_at timestamp
  
  indexes {
    (api_key_id, service_type) [unique]
    service_type
  }
  
  Note: 'Services each API key has access to'
}

Table api_key_usage {
  id uuid [pk]
  api_key_id uuid [not null, ref: > api_keys.id]
  endpoint varchar [not null]
  method varchar(10) [not null]
  status_code integer [not null]
  response_time_ms integer [null]
  ip_address varchar(45) [null]
  user_agent text [null]
  metadata json [null]
  used_at timestamp [not null]
  created_at timestamp
  updated_at timestamp
  
  indexes {
    (api_key_id, used_at)
    used_at
  }
  
  Note: 'API key usage tracking for analytics'
}

// ============================================
// Notes
// ============================================
// 
// USER ROLES:
// - admin: Full system access, can manage users, pricing, view analytics
//          Created ONLY via database seeder, never through registration
// - user: Regular user, can register, top-up, use API, view own data
//         Created through normal registration flow
// 
// PAY-AS-YOU-GO FLOW:
// 1. User registers → service_account created (balance = 0)
// 2. User tops up → Payment created → balance increases
// 3. User makes API call → usage_record created → balance decreases
// 4. Balance hits 0 → account suspended (or use credit_limit for postpaid)
// 
// PRICING:
// - Base price per 1000 tokens stored in pricing table
// - Volume discounts in pricing_tiers (e.g., 10% off after 1M tokens)
// - Cost is calculated and locked at time of usage
// 
// INVOICES:
// - Monthly invoices generated for postpaid accounts (credit_limit > 0)
// - Prepaid accounts (credit_limit = 0) don't need invoices
// 
// ADMIN ENDPOINTS:
// - GET /api/admin/users - List all users
// - GET /api/admin/users/{id} - View user details
// - PUT /api/admin/users/{id} - Update user (including role)
// - DELETE /api/admin/users/{id} - Delete user
// - GET /api/admin/service-accounts - List all service accounts
// - POST /api/admin/service-accounts/{id}/adjust-balance - Manual balance adjustment
// - POST /api/admin/service-accounts/{id}/change-status - Suspend/activate accounts
// - POST /api/admin/pricing - Create new pricing
// - PUT /api/admin/pricing/{id} - Update pricing
// - GET /api/admin/analytics/usage - Usage analytics
// - GET /api/admin/analytics/revenue - Revenue analytics
// - GET /api/admin/analytics/users - User analytics